Fix the media query on mobile.

--- a/style.css
+++ b/style.css
@@ -363,8 +363,8 @@ button:hover {
     padding: 3.5px;
   }
   .card {
-    width: 320px;
-    height: 310px;
+    width: 290px;
+    height: 300px;
     padding: 20px 30px;
   }
   .container {
